--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Lato&family=Lilita+One&display=swap');
-		</style>
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="icon"
+      href="%sveltekit.assets%/favicon.png"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width"
+    />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Lato&family=Lilita+One&display=swap');
+    </style>
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
