--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,16 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="%sveltekit.assets%/favicon.png"
+      href="%sveltekit.assets%/nwcp.svg"
     />
     <meta
       name="viewport"
       content="width=device-width"
+    />
+    <link
+      rel="manifest"
+      crossorigin="use-credentials"
+      href="%sveltekit.assets%/manifest.json"
     />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Lato&family=Lilita+One&display=swap');
