--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Lato&family=Lilita+One&display=swap');
     </style>
-    <svg style="position:absolute;z-index:-1;opacity:0">
+    <svg style="position: absolute; z-index: -1; opacity: 0">
       <filter id="variance">
         <feTurbulence
           type="fractalNoise"
@@ -32,7 +32,10 @@
           values="0.5"
         />
         <feComponentTransfer>
-          <feFuncA type="table" tableValues="0.5 0.5 0.5 1"/>
+          <feFuncA
+            type="table"
+            tableValues="0.5 0.5 0.5 1"
+          />
         </feComponentTransfer>
         <feBlend
           in="SourceGraphic"
