--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
       href="%sveltekit.assets%/manifest.json"
     />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Lato&family=Lilita+One');
+      @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Lilita+One&family=Saira+Extra+Condensed:wght@400;700');
     </style>
     <svg style="position: absolute; z-index: -1; opacity: 0">
       <filter id="variance">
