Added: nw-cp width attribute (custom element for embedding) Updated: embedding documentation

--- a/static/singleframetest.html
+++ b/static/singleframetest.html
@@ -27,7 +27,10 @@
           type="text/javascript"
           src="/c.js"
         ></script>
-        <nw-cp char="EAFkTh2akyBMcApXaXRjaHVudGVy" />
+        <nw-cp
+          char="EAFkTh2akyBMcApXaXRjaHVudGVy"
+          width="800"
+        />
       </div>
     </div>
   </body>
